<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="com.example.vijaya.myorder.MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                style="@style/HeaderTextStyle"
                android:text = "Name"
                />
            <EditText
                android:id="@+id/user_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16sp"
                android:inputType="textCapWords" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/HeaderTextStyle"
                android:text = "Email"
                />
            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16sp"
                android:inputType="textCapWords" />
        </LinearLayout>


        <TextView
            style="@style/HeaderTextStyle"
            android:text="@string/toppings" />



        <CheckBox
            android:id="@+id/olives"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16sp"
            android:paddingLeft="24dp"
            android:text="@string/olives"
            android:textSize="16sp" />
        <CheckBox
            android:id="@+id/jalapenoes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16sp"
            android:paddingLeft="24dp"
            android:text="@string/jalapenoes"
            android:textSize="16sp" />
        <CheckBox
            android:id="@+id/chicken"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16sp"
            android:paddingLeft="24dp"
            android:text="@string/chicken"
            android:textSize="16sp" />
        <CheckBox
            android:id="@+id/onion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16sp"
            android:paddingLeft="24dp"
            android:text="@string/onion"
            android:textSize="16sp" />
        <CheckBox
            android:id="@+id/bellpeppers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16sp"
            android:paddingLeft="24dp"
            android:text="@string/bellpeppers"
            android:textSize="16sp" />
        <CheckBox
            android:id="@+id/lettuce"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16sp"
            android:paddingLeft="24dp"
            android:text="@string/lettuce"
            android:textSize="16sp" />
        <CheckBox
            android:id="@+id/corn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16sp"
            android:paddingLeft="24dp"
            android:text="@string/corn"
            android:textSize="16sp" />

        <TextView
            style="@style/HeaderTextStyle"
            android:text="@string/quantity" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginRight="8dp"
                android:onClick="decrement"
                android:text="-" />

            <TextView
                android:id="@+id/quantity_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:text="@string/initial_quantity_value"
                android:textColor="#000000" />

            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:onClick="increment"
                android:text="+" />


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/sendEmail"
                android:layout_width="150dp"
                android:layout_height="48dp"
                android:onClick="sendEmail"
                android:text="submitOrder" />

            <Button
                android:layout_width="150dp"
                android:layout_height="48dp"
                android:onClick="submitOrder"
                android:text="Summary" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>